# astro-remote

./: .clang-format  .gitignore  CLAUDE.md  CONTEXT.md  README.md  platformio.ini
.backup/: camera_control.cpp  camera_control.h
.githooks/: pre-commit
.github/workflows/: deploy-web.yml  webclient-tests.yml
docs/: architecture.md  sony-ble-protocol.md
docs/adr/: 0001-bulb-as-timed-shutter-toggles.md  0002-dual-ble-roles-camera-client-and-remote-server.md  0003-guard-bulb-toggle-on-shutter-status.md  0004-selectablelist-draws-to-a-templated-target.md  0005-flicker-free-rendering-via-offscreen-canvases.md  0006-web-remote-offline-pwa-vendored-tailwind.md  0007-multi-camera-store-with-single-active-pointer.md
simulator/: CMakeLists.txt
simulator/assets/fonts/: README.md
simulator/include/: hardware_interface.h
simulator/src/: sdl_hardware.cpp  sdl_hardware.h
src/: app.h  app_astro.h  ble_device.cpp  ble_device.h  ble_transport.cpp  ble_transport.h  camera_commands.cpp  camera_commands.h  debug.cpp  debug.h  hardware_interface.h  main.bak  main.cpp  menu_system.cpp  menu_system.h  selectable_list.cpp  selectable_list.h  sony_camera.cpp  sony_camera.h  test_video_screen.cpp.bak
src/components/: menu_system.cpp  menu_system.h  selectable_list.cpp  selectable_list.h  selectable_list.tpp
src/hardware/: hardware_interface.h  m5_hardware.h
src/processes/: astro.cpp  astro.h  focus.h  manual.h  photo.h  scan.h  settings.h  video.h
src/screens/: astro_run_screen.cpp  astro_run_screen.h  astro_screen.cpp  astro_screen.h  base_screen.h  base_screen.tpp  camera_detail_screen.cpp  camera_detail_screen.h  camera_list_screen.cpp  camera_list_screen.h  control_screen.h  emergency_screen.cpp  (+13 more)
tests/: menu_navigation_test.cpp
tools/: monitor.py
(+39 files in other folders)
